# FilereaderLP

./: .travis.yml  CMakeLists.txt  README.md  config.hpp.in  readerlp-config.cmake.in  readerlp.pc.in
app/: CMakeLists.txt  run.cpp
check/: CMakeLists.txt  QPLIB_8938.lp  config.hpp.in  qap10.lp  test.cpp
src/: CMakeLists.txt  builder.hpp  instance.hpp  model.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
test/: CMakeLists.txt  run.cpp
